# lib/db/src/schema/index.ts
@@ -6,3 +6,4 @@ export * from "./auth";
 export * from "./affirmations";
 export * from "./conversations";
 export * from "./messages";
+export * from "./medications";
